# answer-app

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  pytest.ini
.github/workflows/: release.yml
.streamlit/: config.toml
.streamlit/secrets/: .gitignore  secrets.toml.example
docs/development/: api-configuration.md  development.md  version-management.md
docs/infrastructure/: bootstrap.md  cloud-build.md  cloud_infra_changes.md  rollbacks.md  terraform.md
docs/installation/: deployment.md  oauth-setup.md  prerequisites.md
docs/reference/: api-configuration.md  development.md  helper-scripts.md
docs/terraform/: bootstrap.md  cloud-build.md  overview.md
docs/troubleshooting/: known-issues.md
scripts/: all_deploy.sh  bootstrap.sh  client.py  install.sh  send_question.sh  set_audience.sh  set_audience_and_token.sh  set_token.sh  set_variables.sh  terraform_service_account_roles.txt  test_endpoint.sh  un_bootstrap.sh  uninstall.sh  write_secrets.py
src/: Dockerfile  api.py  config.yaml  discoveryengine_utils.py  main.py  model.py  requirements.txt  utils.py
src/answer_app/: config.yaml  discoveryengine_utils.py  main.py  model.py  utils.py
src/backend/: .dockerignore  config.yaml  discoveryengine_utils.py  main.py  model.py  requirements-test.txt  requirements.txt  utils.py
src/backend/tests/: test_discoveryengine_utils.py  test_main.py  test_model.py  test_utils.py
src/client/: .dockerignore  Dockerfile  auth_utils.py  client.py  requirements.txt  streamlit_app.py  utils.py
src/helpers/: write_secrets_toml.py
src/package_scripts/: write_secrets_toml.py
src/tests/: test_discoveryengine_utils.py  test_main.py  test_model.py  test_utils.py
terraform/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
terraform/main/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
terraform/modules/additional-components/: bigquery.tf  dns.tf  startup.sh  variables.tf
terraform/modules/answer-app/: bigquery.tf  cloudrun.tf  dashboard.json  iam.tf  locals.tf  monitoring.tf  outputs.tf  schema.json  schema_feedback.json  secrets.tf  secrets_template.toml  storage.tf  variables.tf
terraform/modules/cloud-run/: cloudrun.tf  outputs.tf  variables.tf
terraform/modules/discoveryengine/: discoveryengine.tf  outputs.tf  variables.tf
terraform/modules/iam/: iam.tf  outputs.tf  variables.tf
terraform/modules/loadbalancer/: loadbalancer.tf  outputs.tf  variables.tf
terraform/modules/vpc/: vpc.tf
terraform/modules/workflow/: outputs.tf  variables.tf  workflow.tf  workflow.yaml
tests/: conftest.py  test_client.py  test_client_utils.py  test_discoveryengine_utils.py  test_main.py  test_model.py  test_streamlit_app.py  test_utils.py  test_write_secrets_toml.py
